--- a/predatar-react-app/Dockerfile
+++ b/predatar-react-app/Dockerfile
@@ -13,7 +13,7 @@ RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
 # add app
-COPY . ./
+COPY /predatar-react-app/. ./
 
 # start app
 CMD ["npm", "start"]
