--- a/predatar-react-app/Dockerfile
+++ b/predatar-react-app/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:13.12.0-alpine
 
+RUN mkdir -p /home/node/app && chown -R node:node /home/node/app
+
 # set working directory
-WORKDIR /app
+#WORKDIR /app
+WORKDIR /home/node/app
 
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
@@ -9,6 +12,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 # install app dependencies
 COPY predatar-react-app/package.json ./
 COPY predatar-react-app/yarn.lock ./
+USER node
 RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
