--- a/predatar-react-app/Dockerfile
+++ b/predatar-react-app/Dockerfile
@@ -14,7 +14,8 @@ COPY predatar-react-app/package.json ./
 COPY predatar-react-app/yarn.lock ./
 USER node
 RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+#RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm install react-scripts -g --silent
 
 # add app
 COPY /predatar-react-app/. ./
