--- a/predatar-react-app/Dockerfile
+++ b/predatar-react-app/Dockerfile
@@ -12,12 +12,13 @@ ENV PATH /app/node_modules/.bin:$PATH
 # install app dependencies
 COPY predatar-react-app/package.json ./
 COPY predatar-react-app/yarn.lock ./
-
+USER node
 RUN npm install --silent
 #RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm config set unsafe-perm true
 RUN npm install react-scripts -g --silent
 
-USER node
+
 # add app
 COPY /predatar-react-app/. ./
 
