install yarn without -g

--- a/predatar-react-app/DockerfileYarn
+++ b/predatar-react-app/DockerfileYarn
@@ -16,7 +16,7 @@ RUN npm install --silent
 
 #RUN npm install react-scripts -g --silent
 
-RUN npm install yarn -g --silent
+RUN npm install yarn --silent
 RUN yarn install
 
 # add app
