--- a/predatar-react-app/DockerfileYarn
+++ b/predatar-react-app/DockerfileYarn
@@ -9,14 +9,14 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY predatar-react-app/package.json ./
-COPY predatar-react-app/yarn.lock ./
+#COPY predatar-react-app/yarn.lock ./
 
 RUN npm install --silent
 #RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
 
 #RUN npm install react-scripts -g --silent
 
-RUN npm install yarn --silent
+RUN npm install yarn 
 RUN yarn install
 
 # add app
