--- a/predatar-react-app/DockerfileYarn
+++ b/predatar-react-app/DockerfileYarn
@@ -16,7 +16,7 @@ RUN npm install --silent
 
 #RUN npm install react-scripts -g --silent
 
-RUN npm install yarn -g
+#RUN npm install yarn -g
 RUN yarn install 
 
 # add app
