--- a/predatar-react-app/DockerfileYarn
+++ b/predatar-react-app/DockerfileYarn
@@ -11,12 +11,12 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY predatar-react-app/package.json ./
 COPY predatar-react-app/yarn.lock ./
 
-RUN npm install --silent
+#RUN npm install --silent
 #RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
 
 #RUN npm install react-scripts -g --silent
 
-#RUN npm install yarn -g
+RUN npm install yarn -g
 RUN yarn install 
 
 # add app
